2004-10-12  Bob Wilson  <bob.wilson@acm.org>

	* xtensa-dis.c: Use ISO C90 formatting.

2004-10-09  Alan Modra  <amodra@bigpond.net.au>

	* ppc-opc.c: Revert 2004-09-09 change.

2004-10-07  Bob Wilson  <bob.wilson@acm.org>

	* xtensa-dis.c (state_names): Delete.
	(fetch_data): Use xtensa_isa_maxlength.
	(print_xtensa_operand): Replace operand parameter with opcode/operand
	pair.  Remove print_sr_name parameter.  Use new xtensa-isa.h functions.
	(print_insn_xtensa): Use new xtensa-isa.h functions.  Handle multislot
	instruction bundles.  Use xmalloc instead of malloc.

2004-10-07  David Gibson  <david@gibson.dropbear.id.au>

	* ppc-opc.c: Replace literal "0"s with NULLs in pointer
	initializers.

2004-10-07  Tomer Levi  <Tomer.Levi@nsc.com>

	* crx-opc.c (crx_instruction): Support Co-processor insns.
	* crx-dis.c (COP_ARG_TYPE): New enum for CO-Processor arguments.
	(getregliststring): Change function to use the above enum.
	(print_arg): Handle CO-Processor insns.
	(crx_cinvs): Add 'b' option to invalidate the branch-target
	cache.

2004-10-06  Aldy Hernandez  <aldyh@redhat.com>

	* ppc-opc.c (powerpc_opcodes): Add efscfd, efdabs, efdnabs,
	efdneg, efdadd, efdsub, efdmul, efddiv, efdcmpgt, efdcmplt,
	efdcmpeq, efdtstgt, efdtstlt, efdtsteq, efdcfsi, efdcfsid,
	efdcfui, efdcfuid, efdcfsf, efdcfuf, efdctsi, efdctsidz, efdctsiz,
	efdctui, efdctuidz, efdctuiz, efdctsf, efdctuf, efdctuf, efdcfs.

2004-10-01  Bill Farmer  <Bill@the-farmers.freeserve.co.uk>

	* pdp11-dis.c (print_insn_pdp11): Subtract the SOB's displacement
	rather than add it.

2004-09-30  Paul Brook  <paul@codesourcery.com>

	* arm-dis.c (print_insn_arm): Handle 'e' for SMI instruction.
	* arm-opc.h: Document %e.  Add ARMv6ZK instructions.

2004-09-17  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (AUTOMAKE_OPTIONS): Require 1.9.
	(CONFIG_STATUS_DEPENDENCIES): New.
	(Makefile): Removed.
	(config.status): Likewise.
	* Makefile.in: Regenerated.

2004-09-17  Alan Modra  <amodra@bigpond.net.au>
